kubernetes/deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: fashion-store-project
spec:
  selector:
    app: fashion
    type: backend
  ports:
    - name: http
      port: 5000
      targetPort: 5000
      protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: fashion-store-project
  labels:
    app: fashion
    type: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fashion
      type: backend
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: fashion
        type: backend
    spec:
      containers:
      - name: backend-container
        image: ${AWS_ACCOUNT_ID}.dkr.ecr.${AWS_REGION}.amazonaws.com/${AWS_ECR_BACKEND_REPOSITORY_NAME}:${BITBUCKET_TAG}
        ports:
        - containerPort: 5000
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        readinessProbe:
          httpGet:
            path: /api/health
            port: 5000
          initialDelaySeconds: 10
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /api/health
            port: 5000
          initialDelaySeconds: 30
          periodSeconds: 10

---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: fashion-store-project
spec:
  selector:
    app: fashion
    type: frontend
  ports:
  - port: 80 # External port (what other services/ALB use to reach this service)
    targetPort: 8080 # Internal port (the port your container is listening on)
    protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: fashion-store-project
  labels:
    app: fashion
    type: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fashion
      type: frontend
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: fashion
        type: frontend
    spec:
      containers:
      - name: frontend-container
        image: ${AWS_ACCOUNT_ID}.dkr.ecr.${AWS_REGION}.amazonaws.com/${AWS_ECR_FRONTEND_REPOSITORY_NAME}:${BITBUCKET_TAG}
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"
